# libSerialKey

./: CMakeLists.txt  Makefile  Readme.md
include/: TSerialKey.h
lib/win32/debug_x64/: libMPRSerialKey.lib
lib/win32/debug_x86/: libMPRSerialKey.lib  libSerialKey.lib
lib/win32/release_x64/: libMPRSerialKey.lib
lib/win32/release_x86/: libMPRSerialKey.lib
src/: CMakeLists.txt  TBaseConfiguration.cpp  TBaseConfiguration.h  TBigNumber.cpp  TBigNumber.h  TGenerateKey.cpp  TGenerateKey.h  TMiscUtils.cpp  TMiscUtils.h  TSerialKey.cpp  TValidateKey.cpp  TValidateKey.h  libSerialKey.sln  libSerialKey.vcxproj  libSerialKey_dll.vcxproj
test/: SerialKeyTest.cpp  SerialKeyTest.vcxproj
